* ADDED: `code<->debug_class: service' to hide everything executed by a
  code object from the tracer.  Used by PceEmacs, Visual Hierarchy and
  Inspector to hide idle events and changes-tracking from the Prolog
  debugger.

* FIXED: Avoid possibility of last-window variable (in evt/event.c) to
  become invalid.

* ADDED: library(file_item) the method file_item ->browse to start browsing
  using @finder.

* ENHANCED: Displaying sequenced of modal windows and input-focus handling
  (X11 version).

* FIXED: Error message on `class_variable->value' when passing an illegal
  value.

* MODIFIED: Organisational issues in PceEmacs: renamed class emacs_window
  into emacs_frame.

* FIXED: Type-error in manual tools: man_button_fragment ->initialise:
  Argument 4 (object): `object' expected.

* FIXED: Honour colour of `text_item<-value_text'.

* FIXED: Added *-> to meta-predicates for PceEmacs cross-referencer.

* FIXED: Win32: `box->fill_offset' for boxes displayed on sub-devices.

* PORT: Better diagnosis for libXpm and libjpeg and their headers in
  configure, helping users to fix incomplete or broken installation
  environment.

* ENHANCED: Error recovery sending messages to broken objects.

* FIXED: X11 version: problem when freeing colour objects in use by the
  graphical engine.

* ENHANCED: library(find_file), class file_item not to show . and ..

* FIXED: Crash, notably related to keyboard events destryoing the window
  on which the event happened.  Reported by Lyosha.

* PORT: Fixed vsscanf portability problems in src/ker/goodies.c.  Thanks to
  Gertjan van Noord.

VERSION 5.1.2
=============

* ADDED: library(gradient) defining class gradient for making gradient
  fill-patterns.

* MODIFIED: Images are only turned read-only if a named image is created
  from a data object.

* ADDED: Handling of HSV colour model.  See `colour->initialise'.

* FIXED: Allow .bm (old X11 bitmaps) the contain CRLF rather than plain