@@ -1664,7 +1664,7 @@ static vardecl var_frame[] =
      NAME_transient, "Back pointer for transient frames"),
   SV(NAME_modal, "{application,transient}*", IV_GET|IV_STORE, modalFrame,
      NAME_modal, "Operate as modal window"),
-  IV(NAME_returnValue, "any", IV_NONE,
+  IV(NAME_returnValue, "unchecked", IV_NONE,
      NAME_modal, "Bin for value of ->return"),
   SV(NAME_inputFocus, "bool", IV_GET|IV_STORE, inputFocusFrame,
      NAME_event, "Frame has focus for keyboard events"),
@@ -1745,7 +1745,7 @@ static senddecl send_frame[] =
      NAME_layout, "Recompute windows and resize the frame"),
   SM(NAME_resize, 0, NULL, resizeFrame,
      NAME_layout, "Recompute layout of sub-windows"),
-  SM(NAME_return, 1, "any", returnFrame,
+  SM(NAME_return, 1, "unchecked", returnFrame,
      NAME_modal, "Return after a <-confirm"),
   SM(NAME_create, 0, NULL, createFrame,
      NAME_open, "Establish window-system counterpart"),
